--- a/myportfolio/templates/home.html
+++ b/myportfolio/templates/home.html
@@ -20,7 +20,7 @@
           <li><a href="#">Contact Me</a></li>
           <li><a href="#">Projects</a></li>
           <li><a href="#tech-stack">My Tech Stack</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="#about">About</a></li>
         </ul>
       </div>
 
@@ -38,7 +38,7 @@
     </div>
 
     <div class="page-content">
-      <div class="about">
+      <div class="about" id="about">
         <h2 class="section-heading">About Me</h2>
         <p class="about-me">
           I'm a dedicated Software Development Engineer with a knack for Python,
@@ -52,7 +52,7 @@
           player experienced in Agile methodology.
         </p>
       </div>
-      <div class="tech-stack">
+      <div class="tech-stack" id="tech-stack">
         <h2 class="section-heading" style="color: white">What I Know</h2>
 
         <div class="tech-stack-grid">
@@ -121,7 +121,84 @@
     <div class="projects">
       <h2 class="section-heading">Projects</h2>
       <div class="project-grid">
-        <div class="project-grid-box"></div>
+        <!-- Netflix Clone -->
+        <div class="project-grid-box">
+          <div class="project-grid-box-top">
+            <img
+              class="project-image"
+              src="https://s3-alpha.figma.com/hub/file/936981378/40fd9ce4-a7a2-468d-b87c-1dabb77298e2-cover.png"
+              alt="Netfix-Logo"
+            />
+          </div>
+          <div class="project-grid-box-bottom">
+            <h5 class="project-title">Netflix Clone</h5>
+          </div>
+        </div>
+        <!-- Yelp Review Analysis -->
+        <div class="project-grid-box">
+          <div class="project-grid-box-top">
+            <img
+              class="project-image"
+              src="https://monkeylearn.com/static/d70d1758f728908f33d2faea99db1105/12fd3/normal.png"
+              alt=""
+            />
+          </div>
+          <div class="project-grid-box-bottom">
+            <h5 class="project-title">Yelp Review Analysis</h5>
+          </div>
+        </div>
+        <!-- Cafe Database -->
+        <div class="project-grid-box">
+          <div class="project-grid-box-top">
+            <img
+              class="project-image"
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRYAg7mbu0ML81sD8UCaTS00q3kdFnH3sIJmxCQdvO8IND612eWW9HAGBKYVOrnciFJRK8&usqp=CAU"
+              alt="cafe-db-logo"
+            />
+          </div>
+          <div class="project-grid-box-bottom">
+            <h5 class="project-title">Local Cafe Database</h5>
+          </div>
+        </div>
+        <!-- Habbit Tracker -->
+        <div class="project-grid-box">
+          <div class="project-grid-box-top">
+            <img
+              class="project-image"
+              src="https://mycuprunsover.ca/wp-content/uploads/2022/04/circle-habit-tracker-social.png"
+              alt="habbit-tracker-chart"
+            />
+          </div>
+          <div class="project-grid-box-bottom">
+            <h5 class="project-title">Habbit Tracker</h5>
+          </div>
+        </div>
+        <!-- Musical Time Machine -->
+        <div class="project-grid-box">
+          <div class="project-grid-box-top">
+            <img
+              class="project-image"
+              src="https://media.wnyc.org/i/800/0/l/85/1/shutterstock_174481622.jpg"
+              alt="retro-tape-recorder"
+            />
+          </div>
+          <div class="project-grid-box-bottom">
+            <h5 class="project-title">Musical Time Machine</h5>
+          </div>
+        </div>
+        <!-- Cookie Clicker Game -->
+        <div class="project-grid-box">
+          <div class="project-grid-box-top">
+            <img
+              class="project-image"
+              src="https://cdn.akamai.steamstatic.com/steam/apps/1454400/ss_6937101b45ceffe8336e0f1016363fb17655884b.1920x1080.jpg?t=1708385132"
+              alt="cookie-clicker-logo"
+            />
+          </div>
+          <div class="project-grid-box-bottom">
+            <h5 class="project-title">Cookie Clicker Game</h5>
+          </div>
+        </div>
       </div>
     </div>
 
