--- a/myportfolio/templates/home.html
+++ b/myportfolio/templates/home.html
@@ -200,11 +200,38 @@
           </div>
         </div>
       </div>
+      <div style="margin-left: 45%">
+        <button class="more-button">See More</button>
+      </div>
+    </div>
+    <!-- Contact Me Section -->
+    <div class="contact-me">
+      <div class="container">
+        <h2 class="section-heading">Connect with me at</h2>
+        <div class="social-icons">
+          <a class="social-icon-a" href="https://www.instagram.com/venkatraj07"
+            ><i class="fa-brands fa-square-instagram social-icon"></i
+          ></a>
+          <a class="social-icon-a" href="https://www.linkedin.com/in/b-venkat"
+            ><i class="fa-brands fa-linkedin social-icon"></i
+          ></a>
+          <a class="social-icon-a" href="mailto:venkatraj.bachu98@gmail.com"
+            ><i class="fa-solid fa-envelope social-icon"></i
+          ></a>
+          <a class="social-icon-a" href="https://github.com/Venkatraj-Bachu"
+            ><i class="fa-brands fa-square-github social-icon"></i
+          ></a>
+        </div>
+      </div>
     </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/2d6d24aff9.js"
       crossorigin="anonymous"
     ></script>
   </body>
